fix(style): fix some contrast issues

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -64,9 +64,11 @@ body {
   min-height: 100vh;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@layer base {
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 button,
